<resources>
    <string name="app_name">code</string>
    <string name="str_hilt">HILT</string>
    <string name="str_dagger">DAGGER</string>

    <string name="str_network_xml_api_demo">Network API Demo - XML</string>
    <string name="str_network_compose_api_demo">Network API Demo - COMPOSE</string>
    <string name="str_dagger_concepts_in_practical">Basic Dagger Concepts</string>
    <string name="constructor_injection">Constructor Injection</string>
    <string name="field_injection">Field Injection</string>
    <string name="injecting_interface">Injecting interface</string>
    <string name="injecting_third_party">Injecting third party classes</string>
    <string name="injecting_values_at_runtime">Injecting values at runtime</string>
    <string name="using_qualifiers">Using Qualifiers</string>
    <string name="injecting_at_runtime_using_component_factory">Injecting at runtime using component factory</string>
    <string name="dagger_scoping_concepts">Dagger Scoping Concepts</string>
    <string name="dagger_sub_components_concepts">Dagger Sub Components Concepts</string>
    <string name="normal_intro_demo_scope">Normal Intro Demo Scope</string>
    <string name="application_scoping">Application Scoping</string>
    <string name="initiate">Initiate</string>
    <string name="custom_scoping">Custom Scoping</string>
    <string name="initiate_using_module">Initiate using module</string>
    <string name="initiate_using_component_builder">Initiate using component builder</string>
    <string name="sub_component_factory">Sub-component factory</string>
    <string name="sub_component_builder">Sub-component Builder</string>
    <string name="dagger_multi_bindings">Dagger Multi Bindings</string>
    <string name="intoset">IntoSet</string>
    <string name="elements_into_set">Elements into set</string>
</resources>