<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/constructorInjectionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constructor_injection" />

    <Button
        android:id="@+id/fieldInjectionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_injection" />

    <Button
        android:id="@+id/injectingInterfaceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/injecting_interface" />


</LinearLayout>