<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/daggerConceptsPracticalId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_dagger_concepts_in_practical" />

    <Button
        android:id="@+id/daggerScopingConceptsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dagger_scoping_concepts" />

    <Button
        android:id="@+id/daggerSubComponentsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dagger_sub_components_concepts" />
    
</LinearLayout>